--- a/index.html
+++ b/index.html
@@ -33,19 +33,41 @@
             }
         }
     </script>
+    <style>
+        .carousel-container {
+            height: 12rem;  /* Equivalent to h-48 in Tailwind */
+            overflow: hidden;
+            position: relative;
+        }
+        .carousel-inner {
+            display: flex;
+            height: 100%;
+            transition: transform 0.5s ease;
+        }
+        .carousel-slide {
+            flex: 0 0 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        .carousel-slide img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body class="bg-gradient-to-br from-gray-900 to-gray-800 text-white min-h-screen">
     <header class="py-6">
         <div class="container mx-auto px-4">
             <h1 class="text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-500 mb-4">Thomas Rogers</h1>
             <div class="flex space-x-4 mb-6">
-                <a href="https://www.linkedin.com/in/thomasrogers" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition-colors">
+                <a href="https://www.linkedin.com/in/thomas-rogers-developer" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition-colors">
                     LinkedIn
                 </a>
-                <a href="https://github.com/thomasrogers" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition-colors">
+                <a href="https://github.com/thomasrog3rs" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition-colors">
                     GitHub
                 </a>
-                <a href="/path/to/your/cv.pdf" download class="text-blue-400 hover:text-blue-300 transition-colors">
+                <a href="/documents/Thomas_Rogers.pdf" download class="text-blue-400 hover:text-blue-300 transition-colors">
                     Download CV
                 </a>
             </div>
@@ -56,36 +78,53 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <!-- Project 1 -->
             <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105">
-                <img src="https://via.placeholder.com/400x200" alt="Project 1" class="w-full h-48 object-cover">
+                <div class="carousel-container">
+                    <div class="carousel-inner" id="carousel">
+                        <div class="carousel-slide">
+                            <img src="/images/mooringpin/mooringpin1.png" alt="Mooring Pin Project 1">
+                        </div>
+                        <!-- <div class="carousel-slide">
+                            <img src="/images/mooringpin/mooringpin2.png" alt="Mooring Pin Project 2">
+                        </div> -->
+                        <div class="carousel-slide">
+                            <img src="/images/mooringpin/mooringpin3.png" alt="Mooring Pin Project 3">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="/images/mooringpin/mooringpin4.png" alt="Mooring Pin Project 3">
+                        </div>
+                    </div>
+                    <button onclick="changeSlide(-1)" class="absolute left-2 top-1/2 -translate-y-1/2 bg-black/50 text-white p-2 rounded-full z-10">❮</button>
+                    <button onclick="changeSlide(1)" class="absolute right-2 top-1/2 -translate-y-1/2 bg-black/50 text-white p-2 rounded-full z-10">❯</button>
+                </div>
                 <div class="p-6">
-                    <h2 class="text-xl font-semibold mb-2">Project 1</h2>
-                    <p class="text-gray-400 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <h2 class="text-xl font-semibold mb-2">Mooring Pin</h2>
+                    <p class="text-gray-400 mb-4">This is a hobby project I am working on with a friend, it helps canal boaters to find marinas. It is built with vue on the frontend with a C# API, a custom built C# admin area and uses a Postgres database. It is hosted on a DigitalOcean ubuntu VPS. I am currently rewriting the project in nuxt for better SEO</p>
                     <div class="flex flex-wrap gap-2 mb-4">
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #178600; color: white;">C#</span>
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #e38c00; color: white;">SQL</span>
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #41b883; color: white;">Vue</span>
                     </div>
                     <div class="flex justify-between">
-                        <a href="#" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
-                        <a href="#" class="text-blue-400 hover:text-blue-300 transition-colors">Live Demo</a>
+                        <a href="https://github.com/ThomasRog3rs/AquaTrail-POC" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
+                        <a href="https://www.mooringpin.co.uk" class="text-blue-400 hover:text-blue-300 transition-colors">Live Demo</a>
                     </div>
                 </div>
             </div>
 
             <!-- Project 2 -->
             <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105">
-                <img src="https://via.placeholder.com/400x200" alt="Project 2" class="w-full h-48 object-cover">
+                <img src="/images/filmDb/filmDb.png" alt="Project 2" class="w-full h-48 object-cover">
                 <div class="p-6">
-                    <h2 class="text-xl font-semibold mb-2">Project 2</h2>
-                    <p class="text-gray-400 mb-4">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h2 class="text-xl font-semibold mb-2">Film DB</h2>
+                    <p class="text-gray-400 mb-4">This is a web services assignment I created for MMU inculding MVC and API Development. I hosted it on Azure, however it is no longer live. On this assignment, I achieved a 1st Class Distinction</p>
                     <div class="flex flex-wrap gap-2 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #f1e05a; color: black;">JavaScript</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #61dafb; color: black;">React</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #68a063; color: white;">Node.js</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-java text-black">Java</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-mysql text-black">MySQL</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-js text-black">JavaScript</span>
                     </div>
                     <div class="flex justify-between">
-                        <a href="#" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
-                        <span class="text-gray-500">Live Demo N/A</span>
+                        <a href="https://github.com/ThomasRog3rs/film-db-project" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
+                        <a href="https://1drv.ms/b/s!Apuzvs_WyaRmhqw_7SZh4cwZTAICOQ?e=YWwCBt" class="text-blue-400 hover:text-blue-300 transition-colors">Critical analysis</a>
                     </div>
                 </div>
             </div>
@@ -107,60 +146,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Project 4 -->
-            <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105">
-                <img src="https://via.placeholder.com/400x200" alt="Project 4" class="w-full h-48 object-cover">
-                <div class="p-6">
-                    <h2 class="text-xl font-semibold mb-2">Project 4</h2>
-                    <p class="text-gray-400 mb-4">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-                    <div class="flex flex-wrap gap-2 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #b07219; color: white;">Java</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #6DB33F; color: white;">Spring Boot</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #4479A1; color: white;">MySQL</span>
-                    </div>
-                    <div class="flex justify-between">
-                        <a href="#" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
-                        <a href="#" class="text-blue-400 hover:text-blue-300 transition-colors">Live Demo</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project 5 -->
-            <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105">
-                <img src="https://via.placeholder.com/400x200" alt="Project 5" class="w-full h-48 object-cover">
-                <div class="p-6">
-                    <h2 class="text-xl font-semibold mb-2">Project 5</h2>
-                    <p class="text-gray-400 mb-4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-                    <div class="flex flex-wrap gap-2 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #701516; color: white;">Ruby</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #cc0000; color: white;">Rails</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #4DB33D; color: white;">MongoDB</span>
-                    </div>
-                    <div class="flex justify-between">
-                        <a href="#" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
-                        <span class="text-gray-500">Live Demo N/A</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project 6 -->
-            <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105">
-                <img src="https://via.placeholder.com/400x200" alt="Project 6" class="w-full h-48 object-cover">
-                <div class="p-6">
-                    <h2 class="text-xl font-semibold mb-2">Project 6</h2>
-                    <p class="text-gray-400 mb-4">Deserunt mollit anim id est laborum.</p>
-                    <div class="flex flex-wrap gap-2 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #00ADD8; color: white;">Go</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #e10098; color: white;">GraphQL</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #384d54; color: white;">Docker</span>
-                    </div>
-                    <div class="flex justify-between">
-                        <span class="text-gray-500">GitHub N/A</span>
-                        <a href="#" class="text-blue-400 hover:text-blue-300 transition-colors">Live Demo</a>
-                    </div>
-                </div>
-            </div>
         </div>
     </main>
 
@@ -169,5 +154,27 @@
             <p class="text-gray-400">&copy; 2023 Thomas Rogers. All rights reserved.</p>
         </div>
     </footer>
+
+    <script>
+        let currentSlide = 0;
+        const carousel = document.getElementById('carousel');
+        const slides = carousel.querySelectorAll('.carousel-slide');
+
+        function changeSlide(direction) {
+            currentSlide += direction;
+            
+            // Wrap around
+            if (currentSlide >= slides.length) {
+                currentSlide = 0;
+            }
+            if (currentSlide < 0) {
+                currentSlide = slides.length - 1;
+            }
+
+            // Transform carousel
+            carousel.style.transform = `translateX(-${currentSlide * 100}%)`;
+        }
+    </script>
+
 </body>
 </html>
