fix URLs for github pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a href="https://github.com/thomasrog3rs" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition-colors">
                     GitHub
                 </a>
-                <a href="/documents/Thomas_Rogers.pdf" download class="text-blue-400 hover:text-blue-300 transition-colors">
+                <a href="/portfolio/documents/Thomas_Rogers.pdf" download class="text-blue-400 hover:text-blue-300 transition-colors">
                     Download CV
                 </a>
             </div>
@@ -83,16 +83,16 @@
                 <div class="carousel-container">
                     <div class="carousel-inner" id="carousel">
                         <div class="carousel-slide">
-                            <img src="/images/mooringpin/mooringpin1.png" alt="Mooring Pin Project 1">
+                            <img src="/portfolio/images/mooringpin/mooringpin1.png" alt="Mooring Pin Project 1">
                         </div>
                         <!-- <div class="carousel-slide">
                             <img src="/images/mooringpin/mooringpin2.png" alt="Mooring Pin Project 2">
                         </div> -->
                         <div class="carousel-slide">
-                            <img src="/images/mooringpin/mooringpin3.png" alt="Mooring Pin Project 3">
+                            <img src="/portfolio/images/mooringpin/mooringpin3.png" alt="Mooring Pin Project 3">
                         </div>
                         <div class="carousel-slide">
-                            <img src="/images/mooringpin/mooringpin4.png" alt="Mooring Pin Project 3">
+                            <img src="/portfolio/images/mooringpin/mooringpin4.png" alt="Mooring Pin Project 3">
                         </div>
                     </div>
                     <button onclick="changeSlide(-1)" class="absolute left-2 top-1/2 -translate-y-1/2 bg-black/50 text-white p-2 rounded-full z-10">❮</button>
@@ -115,7 +115,7 @@
 
             <!-- Project 2 -->
             <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105">
-                <img src="/images/filmDb/filmDb.png" alt="Project 2" class="w-full h-48 object-cover">
+                <img src="/portfolio/images/filmDb/filmDb.png" alt="Project 2" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <h2 class="text-xl font-semibold mb-2">Film DB</h2>
                     <p class="text-gray-400 mb-4">This is a web services assignment I created for MMU inculding MVC and API Development. I hosted it on Azure, however it is no longer live. On this assignment, I achieved a 1st Class Distinction</p>
