--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body class="bg-gradient-to-br from-gray-900 to-gray-800 text-white min-h-screen">
     <header class="py-6">
         <div class="container mx-auto px-4">
-            <h1 class="text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-500 mb-4">Thomas Rogers</h1>
+            <h1 class="text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-500 mb-4">Thomas Rogers - Fullstack Developer</h1>
             <div class="flex space-x-4 mb-6">
                 <a href="https://www.linkedin.com/in/thomas-rogers-developer" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition-colors">
                     LinkedIn
