--- a/index.html
+++ b/index.html
@@ -100,13 +100,18 @@
                 </div>
                 <div class="p-6">
                     <h2 class="text-xl font-semibold mb-2">Mooring Pin</h2>
-                    <p class="text-gray-400 mb-4">I developed a comprehensive marina finder application for canal boaters, demonstrating expertise across multiple technical domains. Initially, I created a Proof of Concept using Vue.js, focusing on a responsive, mobile-friendly design implemented with Tailwind CSS. 
+                    <p class="text-gray-400 mb-4">
+                        I developed a comprehensive marina finder application for canal boaters, showing my knowledge of multiple technical domains. Initially, I created a Proof of Concept using Vue.js, focusing on a responsive, mobile-friendly design with Tailwind CSS.
+                    </p>
 
-                        On the backend, I contributed to the C# API development, utilizing Dapper as the ORM for efficient database interactions with PostgreSQL. I designed and deployed the application on a DigitalOcean Ubuntu VPS using Docker, ensuring secure deployment with SSL certificate implementation.
-                        
-                        To enhance product insights, I developed a customer analytics dashboard to monitor site traffic and user feedback. Additionally, I created marketing materials, including a promotional banner. Currently, I am strategically rewriting the application in Nuxt.js to improve SEO, introduce new features, and elevate overall code quality.
-                        
-                        Key Technologies: Vue.js, Nuxt.js, C#, Dapper, PostgreSQL, Docker, Tailwind CSS, Digital Ocean, SSL</p>                    <div class="flex flex-wrap gap-2 mb-4">
+                    <p class="text-gray-400 mb-4">
+                        On the backend, I contributed to the C# API development, utilizing Dapper as the ORM for database interactions with PostgreSQL. I deployed the application on a DigitalOcean Ubuntu VPS using Docker, and ensured the site was secured with an SSL cirtificate.
+                    </p>
+
+                    <p class="text-gray-400 mb-4">
+                        To enhance product insights, I developed an analytics dashboard to monitor site traffic and user feedback. Additionally, I created marketing materials, including a promotional banner. Currently, I am strategically rewriting the application in Nuxt.js to improve SEO, introduce new features, and improve overall code quality.
+                    </p>
+                    <div class="flex flex-wrap gap-2 mb-4">
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #178600; color: white;">C#</span>
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #e38c00; color: white;">SQL</span>
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #41b883; color: white;">Vue</span>
