--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </p>
 
                     <p class="text-gray-400 mb-4">
-                        For the FilmDB project, I created a robust Java-based web application with a complete film management system. The project featured a comprehensive API that implemented full CRUD (Create, Read, Update, Delete) operations on a movie database. I developed an MVC web interface with sophisticated functionality, including:
+                        For the FilmDB project, I created a Java-based web application for a film management system. The project featured a comprehensive API that implemented full CRUD operations on a movie database. I developed an MVC web interface with sophisticated functionality, including:
                     
                         - A dedicated testing page for AJAX call verification
                         - A user-friendly web interface allowing complete movie management
@@ -145,7 +145,7 @@
                     </p>
                     
                     <p class="text-gray-400 mb-4">
-                        To complement the technical implementation, I conducted a critical analysis report that provided in-depth insights into the project's architecture, design choices, and technical considerations. The project was hosted on Azure, showcasing my cloud deployment and infrastructure skills.
+                        I also wrote a critical analysis report that provided in-depth insights into the project's architecture and design choices. The project was hosted on Azure, showcasing my cloud deployment and infrastructure skills.
                     </p>
                     <div class="flex flex-wrap gap-2 mb-4">
                         <span class="text-xs px-2 py-1 rounded-full font-semibold bg-java text-white">Java</span>
