slight format changes

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
                 </div>
                 <div class="p-6">
                     <h2 class="text-xl font-semibold mb-2">Mooring Pin</h2>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-csharp text-white">C#</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #e38c00; color: white;">SQL</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #41b883; color: white;">Vue</span>
+                    </div>
+                    <div class="flex justify-between mb-4">
+                        <a href="https://github.com/ThomasRog3rs/AquaTrail-POC" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
+                        <a href="https://www.mooringpin.co.uk" class="text-blue-400 hover:text-blue-300 transition-colors">Live Demo</a>
+                    </div>
                     <p class="text-gray-400 mb-4">
                         I developed a marina finder application for canal boaters, showing my knowledge of multiple technical domains. Initially, I created a Proof of Concept using Vue.js, focusing on a responsive, mobile-friendly design with Tailwind CSS.
                     </p>
@@ -115,15 +124,6 @@
                     <p class="text-gray-400 mb-4">
                         Currently, I am strategically rewriting the application in Nuxt.js to improve SEO, introduce new features, and improve overall code quality.
                     </p>
-                    <div class="flex flex-wrap gap-2 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-csharp text-white">C#</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #e38c00; color: white;">SQL</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #41b883; color: white;">Vue</span>
-                    </div>
-                    <div class="flex justify-between">
-                        <a href="https://github.com/ThomasRog3rs/AquaTrail-POC" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
-                        <a href="https://www.mooringpin.co.uk" class="text-blue-400 hover:text-blue-300 transition-colors">Live Demo</a>
-                    </div>
                 </div>
             </div>
 
@@ -132,6 +132,15 @@
                 <img src="/portfolio/images/filmDb/filmDb.png" alt="Project 2" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <h2 class="text-xl font-semibold mb-2">Film DB</h2>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-java text-white">Java</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-mysql text-white">MySQL</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-js text-white">JavaScript</span>
+                    </div>
+                    <div class="flex justify-between mb-4">
+                        <a href="https://github.com/ThomasRog3rs/film-db-project" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
+                        <a href="https://1drv.ms/b/s!Apuzvs_WyaRmhqw_7SZh4cwZTAICOQ?e=YWwCBt" class="text-blue-400 hover:text-blue-300 transition-colors">Critical analysis</a>
+                    </div>
                     <p class="text-gray-400 mb-4">
                         This was an assignment at Manchester Metropolitan University, demonstrating skills in full-stack development.
                     </p>
@@ -151,15 +160,6 @@
                     <p class="text-gray-400 mb-4">
                         I also wrote a critical analysis report that provided in-depth insights into the project's architecture and design choices. The project was hosted on Azure, showcasing my cloud deployment and infrastructure skills.
                     </p>
-                    <div class="flex flex-wrap gap-2 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-java text-white">Java</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-mysql text-white">MySQL</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-js text-white">JavaScript</span>
-                    </div>
-                    <div class="flex justify-between">
-                        <a href="https://github.com/ThomasRog3rs/film-db-project" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
-                        <a href="https://1drv.ms/b/s!Apuzvs_WyaRmhqw_7SZh4cwZTAICOQ?e=YWwCBt" class="text-blue-400 hover:text-blue-300 transition-colors">Critical analysis</a>
-                    </div>
                 </div>
             </div>
 
@@ -168,16 +168,16 @@
                 <img src="https://via.placeholder.com/400x200" alt="Project 3" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <h2 class="text-xl font-semibold mb-2">Project 3</h2>
-                    <p class="text-gray-400 mb-4">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
                     <div class="flex flex-wrap gap-2 mb-4">
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #3572A5; color: white;">Python</span>
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #092e20; color: white;">Django</span>
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #336791; color: white;">PostgreSQL</span>
                     </div>
-                    <div class="flex justify-between">
+                    <div class="flex justify-between mb-4">
                         <span class="text-gray-500">GitHub N/A</span>
                         <a href="#" class="text-blue-400 hover:text-blue-300 transition-colors">Live Demo</a>
                     </div>
+                    <p class="text-gray-400 mb-4">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
                 </div>
             </div>
         </div>
