--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                         'sql': '#e38c00',
                         'vue': '#41b883',
                         'js': '#f1e05a',
+                        'vue': '#41b883',
                         'react': '#61dafb',
                         'nodejs': '#68a063',
                         'python': '#3572A5',
@@ -29,7 +30,8 @@
                         'mongodb': '#4DB33D',
                         'go': '#00ADD8',
                         'graphql': '#e10098',
-                        'docker': '#384d54'
+                        'docker': '#384d54',
+                        'css': '#2965f1'
                     }
                 }
             }
@@ -102,8 +104,9 @@
                     <h2 class="text-xl font-semibold mb-2">Mooring Pin</h2>
                     <div class="flex flex-wrap gap-2 mb-4">
                         <span class="text-xs px-2 py-1 rounded-full font-semibold bg-csharp text-white">C#</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #e38c00; color: white;">SQL</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #41b883; color: white;">Vue</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-vue text-white">Vue</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-postgres text-white">postgreSQL</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-css text-white">CSS/Design</span>
                     </div>
                     <div class="flex justify-between mb-4">
                         <a href="https://github.com/ThomasRog3rs/AquaTrail-POC" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
