--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
                 <img src="https://via.placeholder.com/400x200" alt="Project 3" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <h2 class="text-xl font-semibold mb-2">Project 3</h2>
-                    <div class="flex flex-wrap gap-2 mb-4">
+                    <!-- <div class="flex flex-wrap gap-2 mb-4">
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #3572A5; color: white;">Python</span>
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #092e20; color: white;">Django</span>
                         <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #336791; color: white;">PostgreSQL</span>
-                    </div>
+                    </div> -->
                     <div class="flex justify-between mb-4">
                         <span class="text-gray-500">GitHub N/A</span>
                         <a href="#" class="text-blue-400 hover:text-blue-300 transition-colors">Live Demo</a>
