--- a/index.html
+++ b/index.html
@@ -168,19 +168,28 @@
 
             <!-- Project 3 -->
             <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transform transition duration-500 hover:scale-105">
-                <img src="https://via.placeholder.com/400x200" alt="Project 3" class="w-full h-48 object-cover">
-                <div class="p-6">
-                    <h2 class="text-xl font-semibold mb-2">Project 3</h2>
-                    <!-- <div class="flex flex-wrap gap-2 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #3572A5; color: white;">Python</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #092e20; color: white;">Django</span>
-                        <span class="text-xs px-2 py-1 rounded-full font-semibold" style="background-color: #336791; color: white;">PostgreSQL</span>
-                    </div> -->
-                    <div class="flex justify-between mb-4">
-                        <span class="text-gray-500">GitHub N/A</span>
-                        <a href="#" class="text-blue-400 hover:text-blue-300 transition-colors">Live Demo</a>
+                <img src="/portfolio/images/contactKeeper/contact-keeper.png" alt="Project 3" class="w-full h-48 object-cover">
+                <div class="p-6">       
+                    <h2 class="text-xl font-semibold mb-2">Contact Keeper API</h2>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-nodejs text-white">Node.js</span>
+                        <span class="text-xs px-2 py-1 rounded-full font-semibold bg-mongo text-white">MongoDB</span>
                     </div>
-                    <p class="text-gray-400 mb-4">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+                    <div class="flex justify-between mb-4">
+                        <a href="https://github.com/ThomasRog3rs/contact-keeper-api" class="text-blue-400 hover:text-blue-300 transition-colors">GitHub</a>
+                        <span class="text-gray-500">Live Demo N/A</span>
+                    </div>
+                    <p class="text-gray-400 mb-4">A personal project demonstrating my ability to quickly learn and become productive with new technology stacks. This shows my adaptability and self-driven learning beyond my professional work.</p>
+
+                    <p class="text-gray-400 mb-4">Key features of the Contact Keeper API include:
+                    
+                        <ul class="space-y-2 list-disc list-inside text-gray-400 pl-4 mb-4">
+                            <li>Implemented full CRUD (Create, Read, Update, Delete) operations for contact management</li>
+                            <li>Utilised MongoDB for flexible, document-based data storage and retrieval</li>
+                            <li>Integrated user authentication with JWT</li>
+                            <li>Implemented data validation and error handling</li>
+                        </ul>
+                    </p>
                 </div>
             </div>
         </div>
